# fragalysis-stack-behaviour-tests

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: latest-stack-test.yaml
bdd/: .behaverc  README.md  awx_fixtures.py
bdd/features/: api-authentication-for-anonymous-users.feature  api-errors-for-anonymous-users.feature  api-for-anonymous-users.feature  api-for-empty-stack.feature  basic-stack.feature  empty-stack.feature  environment.py
bdd/features/steps/: api_utils.py  awx-cmd.sh  awx_utils.py  browser_utils.py  stack_steps.py  steps.py  steps_given.py  steps_then.py  steps_when.py
behaviour/: .behaverc  README.md
behaviour/features/: api-errors-for-anonymous-users.feature  api-for-anonymous-users.feature  public-target-loader.feature  squon2-job-execution.feature.tbd  squonk-basic-job-execution.feature  squonk2-basic-job-execution.feature
behaviour/features/steps/: api_utils.py  awx_utils.py  browser_utils.py  config.py  s3_utils.py  steps.py  steps_given.py  steps_then.py  steps_when.py
playwright/: README.md  config.py  config.ts  fixture-login.ts  test-fixture-login.spec.ts  test_accounts_login.py  test_login.py  test_testlink_case_oxford-2_login_positive.py  testlink-001.spec.ts  testlink-002.spec.ts  testlink-case_oxford-1_displaying-menu_positive.spec.ts  testlink-case_oxford-2_login_positive.spec.ts
playwrite/: test_login.py
