[tool.poetry]
name = "fragalysis-stack-behaviour-tests"
version = "0.1.0"
description = ""
authors = ["Alan Christie <achristie@informaticsmatters.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
awxkit = "^24.6.1"
behave = { git = "https://github.com/behave/behave", tag = "v1.2.7.dev6" }
playwright = "^1.49.1"
pytest-playwright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
